fix broken css

--- a/src/App.scss
+++ b/src/App.scss
@@ -30,6 +30,10 @@
   margin-top: 8px;
 }
 .row {
+    &.top-level-row {
+      width: 100%;
+      margin-left: 0;
+    }
     .form-control {
       text-align: center;
       color: whitesmoke;
@@ -55,4 +59,5 @@
   margin-top: 24px;
   width: 100%;
   justify-content: center;
+  padding: 0 24px;
 }
